--- a/react-admin_client/src/components/header/index.less
+++ b/react-admin_client/src/components/header/index.less
@@ -1,3 +1,41 @@
 .header{
-    height: 80px;;
+    height: 80px;
+    background-color: #fff;
+    .header-top{
+        height: 40px;
+        border-bottom: 2px solid #1da57a;
+        line-height: 40px;
+        text-align: right;
+        padding-right: 30px;
+        span{
+            margin-right: 15px;
+        }
+    }
+
+    .header-bottom{
+        display: flex;
+        line-height: 40px;
+        .header-bottom-left{
+            width: 25%;
+            text-align: center;
+            font-size: 20px;
+            position: relative;
+            &::after{
+                content: '';
+                position: absolute;
+                transform: translateX(50%);
+                top: 35px;
+                right: 50%;
+                border-top: 20px solid #fff;
+                border-right: 20px solid transparent;
+                border-bottom: 20px solid transparent;
+                border-left: 20px solid transparent;
+            }
+        }
+        .header-bottom-right{
+            width: 75%;
+            text-align: right;
+            margin-right: 45px;
+        }
+    }
 }
